--- a/JiaoBaoYun-hb/html/register/register_phoneNumber.html
+++ b/JiaoBaoYun-hb/html/register/register_phoneNumber.html
@@ -28,15 +28,16 @@
 			</div>
 		</div>
 		<script src="../../js/mui.min.js" type="text/javascript" charset="utf-8"></script>
+		<!--界面中用到的事件-->
 		<script src="../../js/utils/events.js" type="text/javascript" charset="utf-8"></script>
-		
+		<!--加密-->
 		<script src="../../js/utils/rsa/Barrett.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../../js/utils/rsa/BigInt.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../../js/utils/rsa/jQuery.md5.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../../js/utils/rsa/MD5.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../../js/utils/rsa/RSA.js" type="text/javascript" charset="utf-8"></script>
-		
-		
+		<!--本地存储-->
+		<script src="../../js/libs/myStorage/myStorage.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
 			mui.init();
 			mui.plusReady(function() {
@@ -44,17 +45,24 @@
 				var phoneNum = document.getElementById("phoneNumber");
 				events.addTap('register', function() {
 					events.fireToPage('yanZhengMa.html', 'yanzhengma', function() {
-						return phoneNum.value
+						return phoneNum.value;
 					})
 				});
 
 				document.getElementById('register').addEventListener('tap', function() {
+					var tempValue = window.myStorage.getItem('ShakeHand');
+					console.log('秘钥：' + tempValue.Exponent + ',' + tempValue.Modulus);
+					//加密电话号码
+					setMaxDigits(129);
+					var key00 = new RSAKeyPair(tempValue.Exponent, '', tempValue.Modulus);
+					var temp11 = encryptedString(key00, document.getElementById("phoneNumber").value);
+					console.log('加密后为：' + temp11);
 					mui.ajax('http://192.168.0.224:8511/api/CloudApi/GetCode', {
 						data: {
 							uuid: plus.device.uuid,
 							shaketype: 'reg',
 							appid: '5',
-							uid: document.getElementById("phoneNumber").value
+							uid: temp11
 						},
 						dataType: 'json', //服务器返回json格式数据
 						type: 'get', //HTTP请求类型
@@ -67,28 +75,7 @@
 						}
 					});
 				});
-				mui.ajax('http://192.168.0.224:8511/api/CloudApi/GetShakeHand', {
-					data: {
-						uuid: plus.device.uuid,
-						shaketype: 'reg',
-						appid: '5'
-					},
-					dataType: 'json', //服务器返回json格式数据
-					type: 'get', //HTTP请求类型
-					success: function(data) {
-						console.log('0000success:RspCode:' + data.RspCode + ',RspData:' + data.RspData + ',RspTxt:' + data.RspTxt);
-						console.log('11122success:Exponent:' + data.RspData.Exponent + ',Modulus:' + data.RspData.Modulus);
-						setMaxDigits(129);
-						var key00 = new RSAKeyPair(data.RspData.Exponent, '', data.RspData.Modulus);
-						
-						var temp11 = encryptedString(key00, 'qwert12345');
-						console.log('key为： ,加密后的值为：' + temp11);
-					},
-					error: function(xhr, type, errorThrown) {
-						//异常处理；
-						console.log('0000error:' + type);
-					}
-				});
+
 			});
 		</script>
 	</body>
