调试部分网络请求接口

--- a/JiaoBaoYun-hb/html/knowledge/test.html
+++ b/JiaoBaoYun-hb/html/knowledge/test.html
@@ -23,14 +23,14 @@
 					"crypto-js":"../../js/libs/crypto-js/crypto-js"
 				}
 			})
-			mui.plusReady(function(){
-				
-				window.myStorage.setItem("1","5");
-				console.log(window.myStorage.getItem("1"))
-			})
+//			mui.plusReady(function(){
+//				
+//				window.myStorage.setItem("1","5");
+//				console.log(window.myStorage.getItem("1"))
+//			}) 
 			
 			require(["crypto-js"], function (CryptoJS) {
-				var encrypted=CryptoJS.HmacSHA1("jsy309","jsy309").toString(CryptoJS.enc.Base64)
+				var encrypted=CryptoJS.HmacSHA1("gkjhkjh","jsy309").toString(CryptoJS.enc.Base64)
 				console.log(encrypted);
 			});
 		</script>
