云盘-记事界面

--- a/JiaoBaoYun-hb/html/cloud/cloud_home.html
+++ b/JiaoBaoYun-hb/html/cloud/cloud_home.html
@@ -359,7 +359,7 @@
 							events.openNewWindow('app_notes_main.html');
 							break;
 						case "1": //记事
-							events.openNewWindow('app_keeprecord_main.html');
+							events.openNewWindow('app_keeprecord.html');
 							break;
 						case "2": //充值
 							break;
