--- a/JiaoBaoYun-hb/html/cloud/storage_main.html
+++ b/JiaoBaoYun-hb/html/cloud/storage_main.html
@@ -25,18 +25,29 @@
 				margin-top: 10px;
 				width: 30px;
 				height: 25px;
+				margin-left: 10px;
+				margin-right: 10px;
+			}
+
+			.mui-bar-nav~ .mui-content .mui-pull-top-pocket {
+				top: 90px !important;
 			}
 		</style>
 	</head>
 
 	<body>
 
-		<header class="mui-bar mui-bar-nav " style="background: white;">
-			<img class=" mui-pull-left" id="upload" src="../../image/cloud/cloud_upload.gif">
-			<h1 class="mui-title"><img  id="download" src="../../image/cloud/cloud_download.gif"></span></h1>
-			<img class=" mui-pull-right" id="add" src="../../image/cloud/cloud_add.png">
+		<header class="mui-bar mui-bar-nav">
+			<a class="mui-icon mui-icon-left-nav mui-pull-left"></a>
+			<p class="mui-title common-color-white" style="text-align: left;">云盘—云存储</p>
 		</header>
-		<div class="mui-content"></div>
+		<div class="mui-content">
+			<div style="background-color: white;text-align: center;height: 45px;">
+				<img class="mui-pull-left" id="upload" src="../../image/cloud/cloud_upload.gif">
+				<img id="download" src="../../image/cloud/cloud_download.gif">
+				<img class=" mui-pull-right" id="add" src="../../image/cloud/cloud_add.png">
+			</div>
+		</div>
 	</body>
 
 	<script type="text/javascript">
@@ -46,26 +57,28 @@
 				url: 'storage_sub.html',
 				id: 'storage_sub.html',
 				styles: {
-					top: '45px',
+					top: '90px',
 					bottom: '0px',
 				}
 			}]
 		});
 
 		mui.plusReady(function() {
+			var path = [];
+			path.push('云盘—云存储');
 			//显示等待窗口
 			plus.nativeUI.showWaiting('正在加载中');
 			//上传，下载，增加文件夹的监听
-			mui('.mui-bar').on('tap', 'img', function(e) {
+			mui('.mui-content').on('tap', 'img', function(e) {
 				var id = this.getAttribute('id');
 				switch(id) {
-					case 'upload'://上传
+					case 'upload': //上传
 						mui.toast('upload');
 						break;
-					case 'download'://下载
+					case 'download': //下载
 						mui.toast('download');
 						break;
-					case 'add'://新建文件夹
+					case 'add': //新建文件夹
 						e.detail.gesture.preventDefault(); //修复iOS 8.x平台存在的bug，使用plus.nativeUI.prompt会造成输入法闪一下又没了
 						var btnArray = ['取消', '确定'];
 						mui.prompt('请输入新文件夹的名称：', '新文件夹', '新建文件夹', btnArray, function(e) {
@@ -77,7 +90,7 @@
 								} else {
 									//向服务器发送数据并获得成功的回调
 									//新建文件夹
-									var tab = plus.webview.getWebviewById('cloud_sub.html');
+									var tab = plus.webview.getWebviewById('storage_sub.html');
 									mui.fire(tab, "addFolder", {
 										folderName: e.value,
 										folderUrl: 'newFloder'
@@ -89,6 +102,31 @@
 						});
 						break;
 				}
+			});
+
+			//返回上一级
+			mui('.mui-bar-nav').on('tap', '.mui-icon-left-nav', function() {
+				path.pop();
+				if(path.length == 0) {
+					mui.back();
+				} else {
+					var title = document.body.querySelector('.mui-title');
+					console.log(path[path.length - 1]);
+					title.innerHTML = path[path.length - 1];
+					var tab = plus.webview.getWebviewById('storage_sub.html');
+					mui.fire(tab, "comeBack", {
+						path: path[path.length - 1]
+					});
+				}
+			});
+
+			//打开新文件夹
+			window.addEventListener("addPath", function(e) {
+				//获得事件参数
+				var getPath = e.detail.path;
+				path.push(getPath);
+				var title = document.body.querySelector('.mui-title');
+				title.innerHTML = getPath;
 			});
 		})
 	</script>
