--- a/JiaoBaoYun-hb/html/register/yanZhengMa.html
+++ b/JiaoBaoYun-hb/html/register/yanZhengMa.html
@@ -44,14 +44,14 @@
 		<script src="../../js/libs/myStorage/myStorage.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../../js/tempName.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
-			window.addEventListener('yanzhengma',function (event) {
+			mui.init();
+			mui.plusReady(function() {
+				window.addEventListener('yanzhengma', function(event) {
 					var temp = event.detail.data;
-					console.log('传值的电话号码为：'+JSON.stringify(event.detail));
+					console.log('传值的电话号码为：' + JSON.stringify(event.detail));
 					var phoneNum = document.getElementById("phoneNumber");
 					phoneNum.value = temp;
 				});
-			mui.init();
-			mui.plusReady(function() {
 				document.getElementById('register').addEventListener('tap', function() {
 					console.log('点击提交按钮');
 					//获取到本地存储的公钥
@@ -63,31 +63,31 @@
 					var temp11 = encryptedString(key00, document.getElementById("phoneNumber").value);
 					var temp22 = encryptedString(key00, document.getElementById("yanzheng").value);
 					console.log('加密后为：' + temp11);
-					mui.ajax('http://192.168.0.224:8511/api/CloudApi/GetReg', {
-					data: {
-						uuid: plus.device.uuid,
-						shaketype: 'reg',
-						appid: '5',
-						uid:temp11,
-						code:temp22
-					},
-					dataType: 'json', //服务器返回json格式数据
-					type: 'get', //HTTP请求类型
-					success: function(data) {
-						console.log('2222success:RspCode:' + data.RspCode+',RspData:'+JSON.stringify(data.RspData)+',RspTxt:'+data.RspTxt+',data:'+data);
-//						{"UTID":"2","Token":"5zZFcClE0zBJlQlSwBGD8hhghAM=","UserPhone":"111111","UserName":"test70C72521-2CD6-45DD-AF6E-375654EB734A","UserNick":"","UserSex":"0","UserTxt":"","UserImg":""}
-						window.myStorage.setItem(PERSONALINFO,)
-					},
-					error: function(xhr, type, errorThrown) {
-						//异常处理；
-						console.log('22222error:' + type);
-					}
+					//发送注册请求
+					//					mui.ajax('http://192.168.0.224:8511/api/CloudApi/GetReg', {
+					//验证码模式登录
+					mui.ajax('http://192.168.0.224:8511/api/CloudApi/GetCodeLogin', {
+						data: {
+							uuid: plus.device.uuid,
+							shaketype: 'reg',
+							appid: '5',
+							uid: temp11,
+							code: temp22
+						},
+						dataType: 'json', //服务器返回json格式数据
+						type: 'get', //HTTP请求类型
+						success: function(data) {
+							console.log('2222success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt + ',data:' + data);
+							//						{"UTID":"2","Token":"5zZFcClE0zBJlQlSwBGD8hhghAM=","UserPhone":"111111","UserName":"test70C72521-2CD6-45DD-AF6E-375654EB734A","UserNick":"","UserSex":"0","UserTxt":"","UserImg":""}
+							window.myStorage.setItem(PERSONALINFO, )
+						},
+						error: function(xhr, type, errorThrown) {
+							//异常处理；
+							console.log('22222error:' + type);
+						}
+					});
 				});
-				});
-				
-				
 			});
-			
 		</script>
 	</body>
 
