--- a/JiaoBaoYun-hb/html/register/login.html
+++ b/JiaoBaoYun-hb/html/register/login.html
@@ -221,33 +221,33 @@
 							password: passwordBox.value
 						};
 						//对账号和密码加密
-//						var tempValue = window.myStorage.getItem('ShakeHand');
-//						console.log('秘钥：' + tempValue.Exponent + ',' + tempValue.Modulus);
-//						//加密
-//						setMaxDigits(129);
-//						var key00 = new RSAKeyPair(tempValue.Exponent, '', tempValue.Modulus);
-//						var tempUid = encryptedString(key00, loginInfo.account);
-//						var tempPW = encryptedString(key00, loginInfo.password);
-//						console.log('加密后为：' + tempUid + ',' + tempPW);
-//						//发送登录请求
-//						mui.ajax('http://192.168.0.224:8511/api/CloudApi/GetLogin', {
-//							data: {
-//								uuid: plus.device.uuid,
-//								shaketype: 'reg',
-//								appid: '5',
-//								uid: tempUid,
-//								pw: tempPW
-//							},
-//							dataType: 'json', //服务器返回json格式数据
-//							type: 'get', //HTTP请求类型
-//							success: function(data) {
-//								console.log('11111success:RspCode:' + data.RspCode + ',RspData:' + data.RspData + ',RspTxt:' + data.RspTxt);
-//							},
-//							error: function(xhr, type, errorThrown) {
-//								//异常处理；
-//								console.log('111111error:' + type);
-//							}
-//						});
+						var tempValue = window.myStorage.getItem('ShakeHand');
+						console.log('秘钥：' + tempValue.Exponent + ',' + tempValue.Modulus);
+						//加密
+						setMaxDigits(129);
+						var key00 = new RSAKeyPair(tempValue.Exponent, '', tempValue.Modulus);
+						var tempUid = encryptedString(key00, loginInfo.account);
+						var tempPW = encryptedString(key00, loginInfo.password);
+						console.log('加密后为：' + tempUid + ',' + tempPW);
+						//发送登录请求
+						mui.ajax('http://192.168.0.224:8511/api/CloudApi/GetLogin', {
+							data: {
+								uuid: plus.device.uuid,
+								shaketype: 'reg',
+								appid: '5',
+								uid: tempUid,
+								pw: tempPW
+							},
+							dataType: 'json', //服务器返回json格式数据
+							type: 'get', //HTTP请求类型
+							success: function(data) {
+								console.log('11111success:RspCode:' + data.RspCode + ',RspData:' + data.RspData + ',RspTxt:' + data.RspTxt);
+							},
+							error: function(xhr, type, errorThrown) {
+								//异常处理；
+								console.log('111111error:' + type);
+							}
+						});
 
 						
 						app.login(loginInfo, function(err) {
