--- a/JiaoBaoYun-hb/html/register/yanZhengMa.html
+++ b/JiaoBaoYun-hb/html/register/yanZhengMa.html
@@ -20,7 +20,8 @@
 			<form class="mui-input-group">
 				<div class="mui-input-row">
 					<label>手机号</label>
-					<input type="text" id="phoneNumber" placeholder="请输入手机号" readonly="readonly">
+					<!--<input type="text" id="phoneNumber" placeholder="请输入手机号" readonly="readonly">-->
+					<input type="text" id="phoneNumber" placeholder="请输入手机号">
 				</div>
 				<div class="mui-input-row">
 					<label>验证码</label>
@@ -42,7 +43,8 @@
 		<script src="../../js/libs/RSA/RSA.js" type="text/javascript" charset="utf-8"></script>
 		<!--本地存储-->
 		<script src="../../js/libs/myStorage/myStorage.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../../js/tempName.js" type="text/javascript" charset="utf-8"></script>
+		<!--共用-->
+		<script src="../../js/storageKeyName.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
 			mui.init();
 			mui.plusReady(function() {
@@ -77,9 +79,40 @@
 						dataType: 'json', //服务器返回json格式数据
 						type: 'get', //HTTP请求类型
 						success: function(data) {
-							console.log('2222success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt + ',data:' + data);
+							console.log('2222success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
 							//						{"UTID":"2","Token":"5zZFcClE0zBJlQlSwBGD8hhghAM=","UserPhone":"111111","UserName":"test70C72521-2CD6-45DD-AF6E-375654EB734A","UserNick":"","UserSex":"0","UserTxt":"","UserImg":""}
-							window.myStorage.setItem(PERSONALINFO, )
+							window.storageKeyName.storage_tempModel000 =  data.RspData;
+//							window.storageKeyName.storage_tempModel.Token =  data.RspData.Token;
+							console.log('ge ren xinxi:'+data.RspData.UTID+','+window.storageKeyName.storage_tempModel000.Token);
+//							window.myStorage.setItem(window.storageKeyName.storage_personalInfo, JSON.stringify(data.RspData));
+//							console.log('ge ren xin xi :'+JSON.stringify(data.RspData).utid+','+window.storageKeyName.storage_tempModel.UTID);
+							//修改密码
+							var temp0101 = '123456';
+							var temp2211 = encryptedString(key00, temp0101);
+							var temp2222 = encryptedString(key00, data.RspData.UTID);
+							mui.ajax('http://192.168.0.224:8511/api/CloudApi/GetRePW', {
+								data: {
+									uuid: plus.device.uuid,
+									shaketype: 'reg',
+									appid: '5',
+									utid: temp2222,
+									pw: temp2211,
+									token: data.RspData.Token
+								},
+								dataType: 'json', //服务器返回json格式数据
+								type: 'get', //HTTP请求类型
+								success: function(data) {
+									console.log('2212121success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+									//						{"UTID":"2","Token":"5zZFcClE0zBJlQlSwBGD8hhghAM=","UserPhone":"111111","UserName":"test70C72521-2CD6-45DD-AF6E-375654EB734A","UserNick":"","UserSex":"0","UserTxt":"","UserImg":""}
+									window.myStorage.setItem(window.storageKeyName.storage_personalInfo, JSON.stringify(data.RspData));
+									//修改密码
+
+								},
+								error: function(xhr, type, errorThrown) {
+									//异常处理；
+									console.log('2221212error:' + type);
+								}
+							});
 						},
 						error: function(xhr, type, errorThrown) {
 							//异常处理；
