协议修改完毕

--- a/JiaoBaoYun-hb/html/register/modify_password.html
+++ b/JiaoBaoYun-hb/html/register/modify_password.html
@@ -16,17 +16,17 @@
 		<div class="mui-content">
 			<br/>
 			<form class="mui-input-group">
-				<div class="mui-input-row">
+				<!--<div class="mui-input-row">
 					<label>原密码</label>
 					<input type="text" id="phoneNumber" placeholder="请输入手机号 ">
+				</div>-->
+				<div class="mui-input-row">
+					<label>新密码</label>
+					<input type="text" id="password0" placeholder="请输入新密码 ">
 				</div>
 				<div class="mui-input-row">
 					<label>新密码</label>
-					<input type="text" id="phoneNumber" placeholder="请输入新密码 ">
-				</div>
-				<div class="mui-input-row">
-					<label>新密码</label>
-					<input type="text" id="phoneNumber" placeholder="重新输入新密码 ">
+					<input type="text" id="password1" placeholder="重新输入新密码 ">
 				</div>
 			</form>
 			<div class="mui-content-padded">
@@ -36,23 +36,66 @@
 		<script src="../../js/mui.min.js" type="text/javascript" charset="utf-8"></script>
 		<!--界面中用到的事件-->
 		<script src="../../js/utils/events.js" type="text/javascript" charset="utf-8"></script>
+		<!--本地存储-->
+		<script src="../../js/libs/myStorage/myStorage.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../../js/storageKeyName.js" type="text/javascript" charset="utf-8"></script>
 		<!--加密-->
 		<script src="../../js/libs/RSA/Barrett.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../../js/libs/RSA/BigInt.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../../js/libs/RSA/jQuery.md5.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../../js/libs/RSA/MD5.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../../js/libs/RSA/RSA.js" type="text/javascript" charset="utf-8"></script>
-		<!--本地存储-->
-		<script src="../../js/libs/myStorage/myStorage.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../../js/libs/crypto-js/require.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../../js/utils/RSAEncrypt.js" type="text/javascript" charset="utf-8"></script>
+		<!---->
+		<script src="js/mui.enterfocus.js" type="text/javascript" charset="utf-8"></script>
+		<!--网络请求-->
+		<script src="../../js/utils/postData.js" type="text/javascript" charset="utf-8"></script>
+		<!--签名-->
+		<script src="../../js/libs/crypto-js/require.js"></script>
+		<script src="../../js/utils/sortSign.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../../js/utils/signHmacSHA1.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
 			mui.init();
 			mui.plusReady(function() {
 				//点击修改密码方法
 				events.addTap('modifypassword', function() {
-
+					//修改密码
+					var temp0101 = '123456';
+					var temp2211 = encryptedString(key00, temp0101);
+					var temp2222 = encryptedString(key00, data.RspData.UTID);
+					mui.ajax('http://192.168.0.224:8511/api/CloudApi/GetRePW', {
+						data: {
+							uuid: plus.device.uuid,
+							shaketype: 'reg',
+							appid: '5',
+							utid: temp2222,
+							pw: temp2211,
+							token: data.RspData.Token
+						},
+					});
+					//获取个人信息
+//					var personalInfo = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).UserPhone;
+					var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).UTID;
+					var personalToken = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).Token;
+					var encryptUTID = RSAEncrypt.enctype(personalUTID);
+					//对个人号码加密
+//					var encryptNumb = RSAEncrypt.enctype(personalInfo);
+					//对新密码加密
+					var encryptPW = RSAEncrypt.enctype(document.getElementById("password0").value);
+					//拼接需要的签名
+					var signTemp = sortUrls.sortIt(['uuid=' + plus.device.uuid, 'shaketype=reg', 'appid=' + plus.runtime.appid, 'utid=' + encryptUTID, 'pw=' + encryptPW,'token='+personalToken]);
+					//生成签名，返回值sign则为签名
+					signHmacSHA1.sign(signTemp, 'jsy309', function(sign) {
+						//发送修改密码协议
+							postData(storageKeyName.MAINURL + 'PostRePW', tempData, function(data) {
+								//成功，关闭等待框
+								wd.close();
+								console.log('11111success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+								//存储到手机本地
+//								window.myStorage.setItem(window.storageKeyName.PERSONALINFO, data.RspData);
+							}, wd);
+					});
 				});
-
 			});
 		</script>
 	</body>
