--- a/JiaoBaoYun-hb/html/register/register_phoneNumber.html
+++ b/JiaoBaoYun-hb/html/register/register_phoneNumber.html
@@ -104,10 +104,10 @@
 							
 							
 							var phoneNum = document.getElementById("phoneNumber");
-							events.addTap('register', function() {
+//							events.addTap('register', function() {
 								events.fireToPage('yanZhengMa.html', 'yanzhengma', function() {
 									return phoneNum.value;
-								});
+//								});
 							});
 						},
 						error: function(xhr, type, errorThrown) {
