--- a/JiaoBaoYun-hb/html/homework/homework-tea.html
+++ b/JiaoBaoYun-hb/html/homework/homework-tea.html
@@ -15,18 +15,23 @@
 		<header class="mui-bar mui-bar-nav">
 		    <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 		    <h1 class="mui-title">作业</h1>
-		   	<a class="mui-icon  mui-icon-bars mui-pull-right"></a>
+		   	<a id="more" class="mui-icon  mui-icon-bars mui-pull-right"></a>
 		    <ul class="sub-nav">
-		    	  <li>错题本</li>
-		    	  <li>作业记录</li>
+		    	  <li><a class="mui-icon iconfont icon-shubendisc" href=""></a>错题本</li>
+		    	  <li><a class="mui-icon iconfont icon-shezhi1" href=""></a>作业记录</li>
 	    	</ul>
 		    <a class="mui-icon iconfont icon-xiangji mui-pull-right">
 		    	
 		    </a>
 		</header>
+		<div class="mui-content">
+		    
+		</div>
 		<script src="../../js/mui.min.js"></script>
+		<script src="../../js/utils/events.js"></script>
 		<script type="text/javascript">
-			mui.init()
+			//加载子页面
+			events.initSubPage('homework-tea-sub.html')
 		</script>
 	</body>
 
