--- a/JiaoBaoYun-hb/html/index.html
+++ b/JiaoBaoYun-hb/html/index.html
@@ -45,6 +45,7 @@
 	</body>
 	<script src="../js/mui.min.js"></script>
 	<script>
+		mui.init();
 		mui.plusReady(function() {
 			slideNavigation.add('index-menu.html', 200)
 				//			document.getElementById('aboutme').addEventListener('tap', function() {
