--- a/JiaoBaoYun-hb/html/register/register_phoneNumber.html
+++ b/JiaoBaoYun-hb/html/register/register_phoneNumber.html
@@ -51,6 +51,12 @@
 		<script type="text/javascript">
 			mui.init();
 			mui.plusReady(function() {
+				var regFlag;
+				window.addEventListener('registerFlag', function(event) {
+					regFlag = event.detail.data;
+					console.log('fa song yanzhengma1211 flag='+regFlag);
+				});
+				console.log('fa song yanzhengma flag='+regFlag);
 				events.preLoad('yanZhengMa.html');
 				events.addTap('register', function() {
 					//获取验证码协议
@@ -59,7 +65,7 @@
 					//拼接登录需要的签名
 					var signTemp = sortUrls.sortIt(['uuid=' + plus.device.uuid, 'shaketype=reg', 'appid=' + plus.runtime.appid, 'uid=' + encryptNumb]);
 					//生成签名，返回值sign则为签名
-					signHmacSHA1.sign(signTemp, 'jsy309', function(sign) {
+					signHmacSHA1.sign(signTemp, storageKeyName.SIGNKEY, function(sign) {
 						//组装发送握手协议需要的data
 						var tempData = {
 							uuid: plus.device.uuid,
@@ -77,8 +83,12 @@
 							//获取到手机号
 							var phoneNum = document.getElementById("phoneNumber");
 							//将输入的手机号，传到验证码界面
+							var tempValue = {
+								phone: phoneNum.value,
+								flag: regFlag
+							};
 							events.fireToPage('yanZhengMa.html', 'yanzhengma', function() {
-								return phoneNum.value;
+								return tempValue;
 							});
 							console.log('11111success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
 							//存储到手机本地
