--- a/JiaoBaoYun-hb/html/register/login.html
+++ b/JiaoBaoYun-hb/html/register/login.html
@@ -131,12 +131,17 @@
 					<a id='forgetPassword'>忘记密码</a>
 				</div>
 			</div>
+			<div class="link-area oauth-area">
+				<a id="more" href="#sheet">遇到登录问题？</a>
+			</div>
+
 			<!--<div class="mui-content-padded oauth-area">
 
 			</div>-->
 		</div>
 		<script src="../../js/mui.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/app.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../../js/utils/events.js" type="text/javascript" charset="utf-8"></script>
 		<!--本地存储-->
 		<script src="../../js/libs/myStorage/myStorage.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../../js/storageKeyName.js" type="text/javascript" charset="utf-8"></script>
@@ -161,6 +166,7 @@
 				$.init({
 					statusBarBackground: '#f7f7f7'
 				});
+				events.preLoad('register_phoneNumber.html');
 				$.plusReady(function() {
 					plus.screen.lockOrientation("portrait-primary");
 					var settings = app.getSettings();
@@ -193,7 +199,7 @@
 					//拼接握手需要的签名
 					var signTemp = sortUrls.sortIt(['uuid=' + plus.device.uuid, 'shaketype=reg', 'appid=' + plus.runtime.appid]);
 					//生成签名，返回值sign则为签名
-					signHmacSHA1.sign(signTemp, 'jsy309', function(sign) {
+					signHmacSHA1.sign(signTemp, storageKeyName.SIGNKEY, function(sign) {
 						//组装发送握手协议需要的data
 						var tempData = {
 							uuid: plus.device.uuid,
@@ -207,6 +213,7 @@
 						postData(storageKeyName.MAINURL + 'PostShakeHand', tempData, function(data) {
 							//成功，关闭等待框
 							wd.close();
+							console.log('11111success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
 							//存储到手机本地
 							window.myStorage.setItem(window.storageKeyName.SHAKEHAND, data.RspData);
 						}, wd);
@@ -219,6 +226,8 @@
 					var autoLoginButton = doc.getElementById("autoLogin");
 					var regButton = doc.getElementById('reg');
 					var forgetButton = doc.getElementById('forgetPassword');
+					var moreButton = doc.getElementById('more');
+					//登录按钮
 					loginButton.addEventListener('tap', function(event) {
 						var loginInfo = {
 							account: accountBox.value,
@@ -263,6 +272,33 @@
 							toMain();
 						});
 					});
+					//遇到登录问题
+					moreButton.addEventListener('tap', function(event) {
+						var btnArray = [{
+							title: "通过短信验证码登录"
+						}, {
+							title: "选取现有的"
+						}];
+						plus.nativeUI.actionSheet({
+							title: "遇到登录问题？",
+							cancel: "取消",
+							buttons: btnArray
+						}, function(e) {
+							var index = e.index;
+							switch(index) {
+								case 0: //取消
+									break;
+								case 1: //通过短信验证码登录
+									//flag为1，表示是验证码登录
+									events.fireToPage('register_phoneNumber.html', 'registerFlag', function() {
+										return 1;
+									});
+									break;
+								case 2:
+									break;
+							}
+						});
+					}, false);
 					$.enterfocus('#login-form input', function() {
 						$.trigger(loginButton, 'tap');
 					});
@@ -274,26 +310,19 @@
 							app.setSettings(settings);
 						}, 50);
 					}, false);
+					//注册账号
 					regButton.addEventListener('tap', function(event) {
-						$.openWindow({
-							url: 'register_phoneNumber.html',
-							id: 'register_phoneNumber.html',
-							preload: true,
-							show: {
-								aniShow: 'pop-in'
-							},
-							styles: {
-								popGesture: 'hide'
-							},
-							waiting: {
-								autoShow: false
-							}
+						//flag为0，表示是注册账号
+						events.fireToPage('register_phoneNumber.html', 'registerFlag', function() {
+							return 0;
 						});
 					}, false);
 					forgetButton.addEventListener('tap', function(event) {
 						$.openWindow({
-							url: 'forget_password.html',
-							id: 'forget_password',
+//							url: 'forget_password.html',
+//							id: 'forget_password',
+							url:'modify_password.html',
+							id:'modify_password.html',
 							preload: true,
 							show: {
 								aniShow: 'pop-in'
