--- a/JiaoBaoYun-hb/html/register/modify_password.html
+++ b/JiaoBaoYun-hb/html/register/modify_password.html
@@ -59,41 +59,39 @@
 			mui.plusReady(function() {
 				//点击修改密码方法
 				events.addTap('modifypassword', function() {
-					//修改密码
-					var temp0101 = '123456';
-					var temp2211 = encryptedString(key00, temp0101);
-					var temp2222 = encryptedString(key00, data.RspData.UTID);
-					mui.ajax('http://192.168.0.224:8511/api/CloudApi/GetRePW', {
-						data: {
-							uuid: plus.device.uuid,
-							shaketype: 'reg',
-							appid: '5',
-							utid: temp2222,
-							pw: temp2211,
-							token: data.RspData.Token
-						},
-					});
 					//获取个人信息
-//					var personalInfo = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).UserPhone;
+					//					var personalInfo = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).UserPhone;
 					var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).UTID;
 					var personalToken = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).Token;
 					var encryptUTID = RSAEncrypt.enctype(personalUTID);
 					//对个人号码加密
-//					var encryptNumb = RSAEncrypt.enctype(personalInfo);
+					//					var encryptNumb = RSAEncrypt.enctype(personalInfo);
 					//对新密码加密
 					var encryptPW = RSAEncrypt.enctype(document.getElementById("password0").value);
 					//拼接需要的签名
-					var signTemp = sortUrls.sortIt(['uuid=' + plus.device.uuid, 'shaketype=reg', 'appid=' + plus.runtime.appid, 'utid=' + encryptUTID, 'pw=' + encryptPW,'token='+personalToken]);
+					var signTemp = sortUrls.sortIt(['uuid=' + plus.device.uuid, 'shaketype=reg', 'appid=' + plus.runtime.appid, 'utid=' + encryptUTID, 'pw=' + encryptPW, 'token=' + personalToken]);
 					//生成签名，返回值sign则为签名
-					signHmacSHA1.sign(signTemp, 'jsy309', function(sign) {
+					signHmacSHA1.sign(signTemp, window.storageKeyName.SIGNKEY, function(sign) {
+						//组装发送握手协议需要的data
+						var tempData = {
+							uuid: plus.device.uuid,
+							shaketype: 'reg',
+							appid: plus.runtime.appid,
+							utid: encryptUTID,
+							pw: encryptPW,
+							token: personalToken,
+							sign: sign
+						};
+						// 等待的对话框
+						var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
 						//发送修改密码协议
-							postData(storageKeyName.MAINURL + 'PostRePW', tempData, function(data) {
-								//成功，关闭等待框
-								wd.close();
-								console.log('11111success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
-								//存储到手机本地
-//								window.myStorage.setItem(window.storageKeyName.PERSONALINFO, data.RspData);
-							}, wd);
+						postData(storageKeyName.MAINURL + 'PostRePW', tempData, function(data) {
+							//成功，关闭等待框
+							wd.close();
+							console.log('11111success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+							//存储到手机本地
+							//								window.myStorage.setItem(window.storageKeyName.PERSONALINFO, data.RspData);
+						}, wd);
 					});
 				});
 			});
